--- a/AND.html
+++ b/AND.html
@@ -338,7 +338,7 @@ div.tocify {
       <a href="idecat.html">Identification of CATA</a>
     </li>
     <li>
-      <a href="idef.html">Identification of the defects</a>
+      <a href="idef.html">Identification of the Defects</a>
     </li>
   </ul>
 </li>
@@ -386,25 +386,17 @@ div.tocify {
 </div>
 
 
-<p>The second method of the <strong>Free perception</strong> submenu is
-AND method. The data used here is the gmo data set provided with the
-SEDA module.</p>
-<p><br><br /></p>
+<p>For the analysis of Napping Data, a particular case of MFA has been
+interfaced. To illustrate the method we will work on the
+<em>perfumes_napping</em> dataset.</p>
 <div id="the-interface" class="section level2">
 <h2><strong>The interface</strong></h2>
-<p><br><br /></p>
-<div id="variables-selection" class="section level3">
-<h3>Variables selection</h3>
-<p><br><br /></p>
-<p>… <br><br /></p>
-</div>
-</div>
-<div id="potential-issues" class="section level2">
-<h2><strong>Potential issue(s)</strong></h2>
-<div id="incorrect-number-of-factors" class="section level3">
-<h3>Incorrect number of factors</h3>
-<p>For the AND to run correctly, the…</p>
-</div>
+<p>As shown in the figure below, the interface is very simple and has
+only 2 fields you really need to worry about: the labels and the
+coordinates. Supplementary information are really interesting to add,
+but they are also optional: the analysis can be run without them. To run
+the an</p>
+<p><img src="images/nap1.png" width="65%" style="display: block; margin: auto auto auto 0;" /></p>
 </div>
 <div id="example" class="section level2">
 <h2><strong>Example</strong></h2>
