--- a/ASD.html
+++ b/ASD.html
@@ -335,7 +335,10 @@ div.tocify {
       <a href="repstim.html">Representation of the Stimulus Space</a>
     </li>
     <li>
-      <a href="idef.html">Identification of the defects</a>
+      <a href="idecat.html">Identification of CATA</a>
+    </li>
+    <li>
+      <a href="idef.html">Identification of the Defects</a>
     </li>
   </ul>
 </li>
@@ -351,6 +354,18 @@ div.tocify {
     </li>
     <li>
       <a href="ASD.html">Analysis of Sorting Data</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Hedonic Data
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="prefmap.html">Preference Mapping</a>
     </li>
   </ul>
 </li>
